tests/custom/issues/405/stderr.expected
Error:
    Parser error in file: 405.essence Error is:
ValidatorError 405.essence:2:11:
  |
2 | such that for i in s . i % 2 = 0
  |           ^^^
Error: Symbol not found "for"

405.essence:2:15:
  |
2 | such that for i in s . i % 2 = 0
  |               ^
Error: Symbol not found "i"

405.essence:2:15:
  |
2 | such that for i in s . i % 2 = 0
  |               ^
Missing ,

405.essence:2:22:
  |
2 | such that for i in s . i % 2 = 0
  |                      ^^^^^^^^^^^
Skipped tokens

